updates for annotate plugin. added sticky toggle switch to view all notes at once. added sticky magictouch/zoom selection. moved toggle and add annotation buttons into the image area approaching a better UI. added offset for new notes and ability to click on the note to edit it (not just the box area). added z-index modifications on hovering so that overlapping notes are viewable. some attempted fixes for ajax loading, adding the instantiation to the onload event of the image tag directly. Some CSS improvements.
git-svn-id: http://svn.montala.net/svn/resourcespace@3812 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/plugins/annotate/css/style.css
+++ b/plugins/annotate/css/style.css
@@ -2,3 +2,18 @@
  border: 1px solid #000000;
  background: #ffffee none repeat scroll 0 0;
  }
+.image-actions {
+    background:  #000;
+    padding:5px;
+    border-bottom-right-radius:5px;
+    -moz-border-radius-bottomright: 5px; 
+    -webkit-border-bottom-right-radius: 5px;
+   
+   position:absolute;
+   top:0px;
+   clear:both;
+  
+}
+.image-actions a {
+   color:#eee;
+}
